# smas

./: .lefthook.yml  .pytest.ini  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/: action.py  agent.py  enums.py  food_type.py  genome.py  grid.py  main.py  region.py  simulation.py
src/genome/: full_combined_genome.py  genome.py  int_genome.py  sequence_genome.py  utils.py
tests/: test_dummy.py
